# DocumentClustering

./: README.md  text-clustering.cabal
NLP/: TextClustering.hs
NLP/TextClustering/: DistanceUtils.hs  FeatureSpace.hs  Internal.hs
Test/: ClusteringCheck.hs
